# f1_data

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  clippy.toml  release.toml  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
benches/: ergast_get.rs  ergast_resource.rs  jolpica_get.rs  jolpica_resource.rs  jolpica_response.rs
data/fantasy/prices/: 2023.yaml
docs/: coding-guidelines.md
examples/: validate_ergast.rs  validate_jolpica.rs
f1-data/: Cargo.toml
f1-data/benches/: ergast_get.rs  ergast_resource.rs
f1-data/benches/data/: response_2022_race_results.json
f1-data/data/fantasy/prices/: 2023.yaml
f1-data/docs/: coding-guidelines.md
f1-data/examples/: validate_ergast.rs
f1-data/src/: driver.rs  id.rs  lib.rs
f1-data/src/ergast/: error.rs  get.rs  mod.rs  orm.rs  resource.rs  response.rs  tests.rs  time.rs
f1-data/src/fantasy/: prices.rs
f1-fantasy/: Cargo.toml
f1-fantasy/docs/rules/: 2023.md
patches/: disable_jolpica_server_rate_limits.patch  no_run_doc_tests_local_jolpica.patch
scripts/: enter_jolpica_devcontainer_shell.sh  get_response_page_rate_limiting.patch  run_local_test_suite.sh  setup_and_run_local_jolpica_server.sh  test_no_run_docs.sh
src/: error.rs  id.rs  lib.rs  rate_limiter.rs
src/ergast/: api.rs  error.rs  get.rs  mod.rs  resource.rs  response.rs  tests.rs  time.rs
src/ergast/tests/: assets.rs
src/fantasy/: convert.rs  get.rs  mod.rs  price.rs  prices.rs  season_prices.rs
src/fantasy/data/prices/: 2023.yaml
src/jolpica/: agent.rs  api.rs  concat.rs  get.rs  mod.rs  resource.rs  response.rs  time.rs
src/jolpica/tests/: assets.rs  known_bugs.rs  mod.rs  util.rs
src/tests/: asserts.rs  mod.rs
