[package]
name = "f1_data"
version = "0.1.0"
edition = "2024"

authors = ["Ramon Sibello <ramon@sibello.ca>"]

description = """
Provides consolidated access to various sources of historical
Formula 1 events information, results, and telemetry data.
"""

readme = "https://github.com/ramonrsv/f1_data/blob/main/README.md"
homepage = "https://github.com/ramonrsv/f1_data"
repository = "https://github.com/ramonrsv/f1_data"
license = "MIT OR Apache-2.0"
keywords = ["data", "f1"]
categories = ["api-bindigns"]

[features]
fantasy = ["dep:serde_yaml"]

[dependencies]
ureq = "2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
serde_with = "3.14"
url = { version = "2.5", features = ["serde"] }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
regex = "1.11"
enum-as-inner = "0.6"

[dev-dependencies]
const_format = "0.2"
ureq = { version = "2.12", features = ["json"] }
criterion = { version = "0.7", features = ["html_reports"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
colored = "3.0"
pretty_assertions = "1.4"
more-asserts = "0.3"

[[bench]]
name = "ergast_resource"
harness = false

[[bench]]
name = "ergast_get"
harness = false

[[example]]
name = "validate_ergast"
