[package]
name = "f1_data"
version = "0.1.0"
edition = "2024"

authors = ["Ramon Sibello <ramon@sibello.ca>"]

description = """
Provides consolidated access to various sources of historical
Formula 1 events information, results, and telemetry data.
"""

readme = "https://github.com/ramonrsv/f1_data/blob/main/README.md"
homepage = "https://github.com/ramonrsv/f1_data"
repository = "https://github.com/ramonrsv/f1_data"
license = "MIT OR Apache-2.0"
keywords = ["data", "f1"]
categories = ["api-bindings"]

[features]
fantasy = ["dep:serde_yaml"]

[dependencies]
ureq = { version = "3.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
serde_with = "3.15"
url = { version = "2.5", features = ["serde"] }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
regex = "1.11"
enum-as-inner = "0.6"
governor = "0.10"
nonzero_ext = "0.3"
ordered-float = "5.1"

[dev-dependencies]
const_format = "0.2"
ureq = { version = "3.1", features = ["json"] }
criterion = { version = "0.7", features = ["html_reports"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
colored = "3.0"
pretty_assertions = "1.4"
more-asserts = "0.3"
indexmap = "2.11"

[[bench]]
name = "jolpica_get"
harness = false

[[bench]]
name = "jolpica_resource"
harness = false

[[bench]]
name = "jolpica_response"
harness = false

[[example]]
name = "validate_jolpica"
