[package]
name = "f1_data"
version = "0.1.0"
edition = "2024"

authors = ["Ramon Sibello <ramon@sibello.ca>"]

description = """
Provides consolidated access to various sources of historical
Formula 1 events information, results, and telemetry data.
"""

readme = "https://github.com/ramonrsv/f1_data/blob/main/README.md"
homepage = "https://github.com/ramonrsv/f1_data"
repository = "https://github.com/ramonrsv/f1_data"
license = "MIT OR Apache-2.0"
keywords = ["data", "f1"]
categories = ["api-bindings"]

[features]
fantasy = ["dep:serde_yaml"]

[dependencies]
ureq = { version = "3.1.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = { version = "0.9.34", optional = true }
serde_with = "3.15.0"
url = { version = "2.5.7", features = ["serde"] }
time = { version = "0.3.44", features = ["serde-human-readable", "macros"] }
regex = "1.11.3"
enum-as-inner = "0.6.1"
governor = "0.10.1"
nonzero_ext = "0.3.0"
ordered-float = "5.1.0"

[dev-dependencies]
const_format = "0.2.35"
criterion = { version = "0.7.0", features = ["html_reports"] }
log = "0.4.28"
env_logger = "0.11.8"
anyhow = "1.0.100"
colored = "3.0.0"
pretty_assertions = "1.4.1"
more-asserts = "0.3.1"
indexmap = "2.11.4"

[[bench]]
name = "jolpica_get"
harness = false

[[bench]]
name = "jolpica_resource"
harness = false

[[bench]]
name = "jolpica_response"
harness = false

[[example]]
name = "validate_jolpica"
