[package]
name = "f1-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
lazy_static = "1.4"
ureq = { version = "2.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
const_format = "0.2"
once_cell = "1.17"
serde_with = "3.0"
url = { version = "2.3", features = ["serde"] }
