[package]
name = "f1-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
ureq = { version = "2.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
const_format = "0.2"
once_cell = "1.18"
serde_with = "3.0"
url = { version = "2.4", features = ["serde"] }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
regex = "1.8"
enum-as-inner = "0.6"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "ergast_resource"
harness = false
